--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" height="30px"/></div>
         <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" height="30px"/></div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
