--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="responsive">
         <div class="difu">difu</div>
-        <div></div>
+        <div style="border: 1px solid black; height: inherit;" ></div>
         <div class="mobile"><img src="https://img.icons8.com/ios/50/000000/smartphone--v2.png" height="30px"/></div>
         <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" height="30px"/></div>
         <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" height="30px"/></div>
