--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/output.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Finito Services</title>
 </head>
 <body>
-    <div class="responsive">
-        <div class="difu">difu</div>
+    <div class="responsive" >
+        <div class="difu  text-2xl font-bold underline">difu</div>
         <div style="border: 1px solid black; height: inherit;" ></div>
         <div class="mobile"><img src="https://img.icons8.com/ios/50/000000/smartphone--v2.png" height="30px"/></div>
         <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" height="30px"/></div>
         <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" height="30px"/></div>
     </div>
+    <div class="main-body container mx-auto">
+    </div>
+    
     <script src="main.js"></script>
 </body>
 </html>
