--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div>
             </div>
          </nav>            -->
-         <nav class="px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+         <nav class="py-2 px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
             <div class="container flex flex-wrap justify-between items-center mx-auto">
                 <a href="#" class="flex items-center">
                     <img src="https://flowbite.com/docs/images/logo.svg"class="mr-3 pl-1 h-7" alt="Flowbite Logo" />
@@ -56,24 +56,24 @@
                     <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
                 </button>
                 <div id="nav-bar" class="hidden w-full">
-                    <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100">
+                    <ul id="nav-bar-items"class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100">
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded" aria-current="page">Home</a>
+                            <a href="index.html" id="home" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Services</a>
+                            <a href="/screens/services.html" id="services" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Services</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Pricing</a>
+                            <a href="/screens/pricing.html" id="price" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Pricing</a>
                         </li>
                         <li>
-                            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Contact</a>
+                            <a href="screens/contact.html" id="cont" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Contact</a>
                         </li>
                     </ul>
                 </div>         
             </div>
         </nav>
-    </div>
+        
     <script src="main.js"></script>
 </body>
 </html>
