--- a/index.html
+++ b/index.html
@@ -1,79 +1,88 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/output.css">
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Finito Services</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="public/output.css">
+  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Finito Services</title>
 </head>
 <body>
-    <div class="responsive" >
-        <div class="difu  text-2xl font-bold underline">difu</div>
-        <div style="border: 1px solid black; height: inherit;" ></div>
-        <div class="mobile"><img src="https://img.icons8.com/ios/50/000000/smartphone--v2.png" style="height: 30px;"/></div>
-        <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" style="height: 30px;"/></div>
-        <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" style="height: 30px;"/></div>
-    </div>
-    <div class="main-body container mx-auto" id="body">     
-        <!-- <nav class="px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
-            <div class="container flex flex-wrap justify-between items-center mx-auto">
-              <a href="#" class="flex items-center">
-                  <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-10" alt="Flowbite Logo" />
-                  <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-              </a>
-              <button id="menu-btn" data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg md:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-500" aria-controls="navbar-multi-level" aria-expanded="false">
+  <div class="responsive bg-gray-600" >
+    <div class="difu  text-2xl font-bold underline">difu</div>
+    <div style="border: 1px solid black; height: inherit;" ></div>
+    <div class="mobile"><img src="https://img.icons8.com/ios/50/000000/smartphone--v2.png" style="height: 30px;"/></div>
+    <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" style="height: 30px;"/></div>
+    <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" style="height: 30px;"/></div>
+  </div>
+  <div class="main-body container mx-auto dark\:bg-blue-600">     
+      <!-- <nav class="px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+        <div class="container flex flex-wrap justify-between items-center mx-auto">
+          <a href="#" class="flex items-center">
+              <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-6 sm:h-10" alt="Flowbite Logo" />
+              <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+          </a>
+          <button id="menu-btn" data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg md:hidden hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-300 dark:text-gray-400 dark:hover:text-white dark:focus:ring-gray-500" aria-controls="navbar-multi-level" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+          </button>
+          <div id="nav-bar" class="inline-flex justify-center items-center hidden w-full md:block md:w-auto" id="navbar-multi-level">
+            <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+              <li>
+                <a href="#" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded" aria-current="page">Home</a>
+              </li>
+              <li>
+                <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Services</a>
+              </li>
+              <li>
+                <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Pricing</a>
+              </li>
+              <li>
+                <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>            -->
+      <nav class="py-4 px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+        <div class="container flex flex-wrap justify-between items-center mx-auto">
+            <a href="#" class="flex items-center">
+                <img src="https://flowbite.com/docs/images/logo.svg"class="mr-3 pl-1 h-7" alt="Flowbite Logo" />
+                <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Difu</span>
+            </a>
+            <button id="menu-btn" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg" data-collapse-toggle="navbar-multi-level" type="button">
                 <span class="sr-only">Open main menu</span>
-                <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-              </button>
-              <div id="nav-bar" class="inline-flex justify-center items-center hidden w-full md:block md:w-auto" id="navbar-multi-level">
-                <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                  <li>
-                    <a href="#" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded" aria-current="page">Home</a>
-                  </li>
-                  <li>
-                    <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Services</a>
-                  </li>
-                  <li>
-                    <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Pricing</a>
-                  </li>
-                  <li>
-                    <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100">Contact</a>
-                  </li>
+                <svg class="w-8 h-8" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+            </button>
+            <div id="nav-bar" class="hidden w-full">
+                <ul id="nav-bar-items"class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100">
+                    <li>
+                        <a href="/index.html" id="home" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Home</a>
+                    </li>
+                    <li>
+                        <a href="/screens/services.html" id="services" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Services</a>
+                    </li>
+                    <li>
+                        <a href="/screens/pricing.html" id="price" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Pricing</a>
+                    </li>
+                    <li>
+                        <a href="/screens/contact.html" id="cont" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Contact</a>
+                    </li>
                 </ul>
-              </div>
-            </div>
-         </nav>            -->
-         <nav class="py-2 px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
-            <div class="container flex flex-wrap justify-between items-center mx-auto">
-                <a href="#" class="flex items-center">
-                    <img src="https://flowbite.com/docs/images/logo.svg"class="mr-3 pl-1 h-7" alt="Flowbite Logo" />
-                    <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Difu</span>
-                </a>
-                <button id="menu-btn" class="inline-flex justify-center items-center ml-3 text-gray-400 rounded-lg" data-collapse-toggle="navbar-multi-level" type="button">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-                </button>
-                <div id="nav-bar" class="hidden w-full">
-                    <ul id="nav-bar-items"class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100">
-                        <li>
-                            <a href="index.html" id="home" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Home</a>
-                        </li>
-                        <li>
-                            <a href="/screens/services.html" id="services" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Services</a>
-                        </li>
-                        <li>
-                            <a href="/screens/pricing.html" id="price" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="screens/contact.html" id="cont" class="block py-2 pr-4 pl-3 text-gray-700 rounded">Contact</a>
-                        </li>
-                    </ul>
-                </div>         
-            </div>
-        </nav>
-        
-    <script src="main.js"></script>
+            </div>         
+        </div>
+    </nav>
+    <div id="browse-now" class="max-h-250 grid grid-cols-[6%_94%] h-80">
+      <div class="max-h-100 w-6 bg-blue-600 border-solid border-r-2 border-black"></div>
+      <div class="px-4 py-12 space-y-2 text-left bg-blue-100">
+        <span class="text-3xl text-gray-600">Shop is fun</span>
+        <p>
+        <span class="font-bold text-2xl">BROWSE OUR PREMIUM PRODUCT</span>
+        <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
+        <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+      </div>
+    </div>
+  <script src="main.js"></script>
 </body>
 </html>
