--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Finito Services</title>
 </head>
-<body>
+<body class="overflow-hidden">
   <div class="responsive bg-gray-600" >
     <div class="difu  text-2xl font-bold underline">difu</div>
     <div style="border: 1px solid black; height: inherit;" ></div>
@@ -45,19 +45,21 @@
         </div>         
       </div>
     </nav>
-    <div id="browse-now" class="max-h-250 grid grid-cols-[15%_85%] h-[30rem]">
-      <div class="max-h-100 w-15% bg-blue-600 border-solid border-r-2 border-black"></div>
-      <div class="space-y-2 text-left bg-blue-100 pl-56 pt-28 pr-8">
-        <span class="text-3xl text-gray-600">Shop is fun</span>
-        <p>
-        <span class="font-bold text-3xl">BROWSE OUR PREMIUM PRODUCT</span>
-        <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
-        <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+    <div id="browse-now" class="absolute">
+      <div class="max-h-250 grid grid-cols-[15%_85%] h-[30rem]">
+        <div class="max-h-100 w-15% bg-blue-600 border-solid border-r-2 border-black"></div>
+        <div class="space-y-2 text-left bg-blue-100 pl-56 pt-28 pr-8">
+          <span class="text-3xl text-gray-600">Shop is fun</span>
+          <p>
+          <span class="font-bold text-3xl">BROWSE OUR PREMIUM PRODUCT</span>
+          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
+          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+        </div>
       </div>
-    </div>
-    <!-- <br> -->
-    <div class="w-72 h-[25rem] left-6 absolute top-36 border-black border-1 bg-purple-100">
+      <!-- <br> -->
+      <div class="w-72 h-[25rem] left-6 absolute top-36 border-black border-1 bg-purple-100">
         A Computer Science Portal
+      </div>
     </div>
   </div>
   <script src="main.js"></script>
