browse-now div desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="tablet"><img src="https://img.icons8.com/ios-filled/50/000000/ipad-pro.png" style="height: 30px;"/></div>
     <div class="laptop"><img src="https://img.icons8.com/ios-filled/50/000000/imac.png" style="height: 30px;"/></div>
   </div>
-  <div class="main-body container relative mx-auto overflow-y-scroll dark\:bg-blue-600">     
+  <div class="main-body relative mx-auto overflow-y-scroll dark\:bg-blue-600">     
     <nav class="py-4 px-2 bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
       <div class="container flex flex-wrap justify-between items-center mx-auto">
         <a href="#" class="flex items-center">
@@ -45,21 +45,29 @@
         </div>         
       </div>
     </nav>
-    <div id="browse-now" class="absolute">
-      <div class="max-h-250 grid grid-cols-[15%_85%] h-[30rem]">
-        <div class="max-h-100 w-15% bg-blue-600 border-solid border-r-2 border-black"></div>
-        <div class="space-y-2 text-left bg-blue-100 pl-56 pt-28 pr-8">
+    <div id="browse-now" class="absolute w-[100%]">
+      <div class="grid grid-cols-[33%_67%] h-[40rem] w-full">
+        <div class="w-100% bg-blue-600 border-solid border-r-2 border-black"></div>
+        <div class="space-y-2 text-left bg-blue-100 pl-56 pt-52 pr-36">
           <span class="text-3xl text-gray-600">Shop is fun</span>
-          <p>
-          <span class="font-bold text-3xl">BROWSE OUR PREMIUM PRODUCT</span>
-          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
-          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+          <br>
+          <br>
+          <span class="font-bold text-5xl">BROWSE OUR PREMIUM PRODUCT</span>
+          <br>
+          <br>
+          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. 
+            One more line, I think. Maybe just another little line, I think</p>
+          <br>
+          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-3xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
         </div>
       </div>
       <!-- <br> -->
-      <div class="w-72 h-[25rem] left-6 absolute top-36 border-black border-1 bg-purple-100">
+      <div class="w-[27rem] h-[36.5rem] left-32 absolute top-14 border-black border-1 bg-purple-100">
         A Computer Science Portal
       </div>
+    </div>
+    <div class="h-[20rem]">
+      <div class="w-100% bg-blue-600 border-solid border-r-2 border-black"></div>
     </div>
   </div>
   <script src="main.js"></script>
