browse now desktop div js

--- a/index.html
+++ b/index.html
@@ -46,28 +46,16 @@
       </div>
     </nav>
     <div id="browse-now" class="absolute w-[100%]">
-      <div class="grid grid-cols-[33%_67%] h-[40rem] w-full">
-        <div class="w-100% bg-blue-600 border-solid border-r-2 border-black"></div>
-        <div class="space-y-2 text-left bg-blue-100 pl-56 pt-52 pr-36">
+      <div class="max-h-250 grid grid-cols-[6%_94%] h-80">
+        <div class="max-h-100 w-6% bg-blue-600 border-solid border-r-2 border-black"></div>
+        <div class="px-4 py-12 space-y-2 text-left bg-blue-100">
           <span class="text-3xl text-gray-600">Shop is fun</span>
-          <br>
-          <br>
-          <span class="font-bold text-5xl">BROWSE OUR PREMIUM PRODUCT</span>
-          <br>
-          <br>
-          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. 
-            One more line, I think. Maybe just another little line, I think</p>
-          <br>
-          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-3xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+          <p>
+          <span class="font-bold text-2xl">BROWSE OUR PREMIUM PRODUCT</span>
+          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
+          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
         </div>
       </div>
-      <!-- <br> -->
-      <div class="w-[27rem] h-[36.5rem] left-32 absolute top-14 border-black border-1 bg-purple-100">
-        A Computer Science Portal
-      </div>
-    </div>
-    <div class="h-[20rem]">
-      <div class="w-100% bg-blue-600 border-solid border-r-2 border-black"></div>
     </div>
   </div>
   <script src="main.js"></script>
