--- a/index.html
+++ b/index.html
@@ -45,18 +45,29 @@
         </div>         
       </div>
     </nav>
-    <div id="browse-now" class="absolute w-[100%]">
-      <div class="max-h-250 grid grid-cols-[6%_94%] h-80">
-        <div class="max-h-100 w-6% bg-blue-600 border-solid border-r-2 border-black"></div>
-        <div class="px-4 py-12 space-y-2 text-left bg-blue-100">
-          <span class="text-3xl text-gray-600">Shop is fun</span>
-          <p>
-          <span class="font-bold text-2xl">BROWSE OUR PREMIUM PRODUCT</span>
-          <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
-          <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+    <div class="h-80">
+      <div id="browse-now" class="absolute w-[100%]">
+        <div class="max-h-250 grid grid-cols-[6%_94%] h-80">
+          <div class="max-h-100 w-6% bg-blue-600 border-solid border-r-2 border-black"></div>
+          <div class="px-4 py-12 space-y-2 text-left bg-blue-100">
+            <span class="text-3xl text-gray-600">Shop is fun</span>
+            <p>
+            <span class="font-bold text-2xl">BROWSE OUR PREMIUM PRODUCT</span>
+            <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
+            <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+          </div>
         </div>
       </div>
     </div>
+    <br>
+    <div id="on-hover" class="bg-blue-600 border-solid h-[23rem] border-black absolute w-[100%]"> asssxa</div>
+    <div class="border-solid h-[23rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+      <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+        <span class="text-lg font-bold text-white">Wired Something</span>
+        <p class="italic text-sm text-white">amska</p>
+      </div>
+    </div>
+    <br>
   </div>
   <script src="main.js"></script>
 </body>
