--- a/index.html
+++ b/index.html
@@ -60,23 +60,12 @@
       </div>
     </div>
     <br>
-    <div id="first-items" class="w-[100%] h-[23.5rem] border-solid border-2 mt-[10rem] border-black grid grid-cols-[50%_50%]">
-      <div class="h-[100%] relative">
-        <div id="on-hover" class="bg-blue-600 border-solid h-[23rem] border-black absolute"> asssxa</div>
-        <div class="border-solid h-[23rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-          <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-            <span class="text-lg font-bold text-white">Wired Something</span>
-            <p class="italic text-sm text-white">amska</p>
-          </div>
-        </div>
-      </div>
-      <div class="relative h-[100%]">
-        <div id="on-hover" class="bg-green-600 border-solid h-[23rem] border-black absolute"> asssxa</div>
-        <div class="border-solid h-[23rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
-          <div class="bg-orange-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
-            <span class="text-lg font-bold text-white">Wired Something for real</span>
-            <p class="italic text-sm text-white">amska mina</p>
-          </div>
+    <div id="first-items" class="">
+      <div id="on-hover" class="bg-blue-600 border-solid h-[23rem] border-black absolute w-[100%]"> asssxa</div>
+      <div class="border-solid h-[23rem] border-2 pt-[14rem] opacity-0 hover:opacity-100 bg-transparent absolute w-[100%]" onmouseover="itemHover()" onmouseout="itemHoverOut()">
+        <div class="bg-green-600 p-6 w-[14rem] h-[6rem] border-solid z-50">
+          <span class="text-lg font-bold text-white">Wired Something</span>
+          <p class="italic text-sm text-white">amska</p>
         </div>
       </div>
     </div>
