--- a/index.html
+++ b/index.html
@@ -193,6 +193,12 @@
         </div>
       </div>
     </div>  
+    <div id="promo" class="w-[95%] h-[22rem] m-3 bg-blue-200 p-16 text-center relative top-[205rem]">
+      <p class="text-3xl font-bold font-mono">Up to 50% off</p>
+      <p class="text-3xl font-bold font-mono mt-3 mb-2">Winter Sale</p>
+      <p class="text-gray-500">Him she'd let them sixth saw light</p>
+      <button class="border-2 border-blue-700 bg-blue-700 text-white font-bold hover:text-black mt-9 pr-6 pl-6 pt-3 pb-3 rounded-3xl hover:bg-blue-200">Shop Now</button>
+    </div>
   </div>
   <script src="main.js"></script>
 </body>
