carousel slide mobile

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>
             <span class="font-bold text-2xl">BROWSE OUR PREMIUM PRODUCT</span>
             <p>plenty text going on here for some reason, doesn't really matter to me like that. NBut let me just do it. One more line, I think.</p>
-            <button class=" border-solid border-2 bg-blue-600 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
+            <button class="bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 border-solid border-2 p-2 px-6 text-white text-md rounded-2xl hover:bg-white hover:text-black hover:border-solid hover:border-2 hover:py-2 hover:px-6 hover:border-blue-600">Browse Now</button>
           </div>
         </div>
       </div>
@@ -199,6 +199,22 @@
       <p class="text-gray-500">Him she'd let them sixth saw light</p>
       <button class="border-2 border-blue-700 bg-blue-700 text-white font-bold hover:text-black mt-9 pr-6 pl-6 pt-3 pb-3 rounded-3xl hover:bg-blue-200">Shop Now</button>
     </div>
+    <section id="slider-wrapper" class="m-[1rem] relative top-[205rem] overflow-hidden ">
+      <ul class="w-[100%] flex list-none m-0 p-0 overflow-y-scroll overflow-hidden scroll-smooth " id="slides-container">
+        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"></li>
+        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-sky-500 via-green-500 to-indigo-500"></li>
+        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-violet-500 via-red-500 to-fuchsia-500"></li>
+        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-cyan-500 via-yellow-500 to-blue-500"></li>
+      </ul>
+      <div class="flex w-[100%]">
+        <button class="flex m-auto h-[2rem] bg-white hover:bg-black-400 w-[2rem] text-sm p-0 mr-[1rem] cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem] left-0 pl-[0.25rem]" id="slide-arrow-prev">
+          &#8249;
+        </button>
+        <button class="flex m-auto h-[2rem] bg-white hover:bg-black-400 w-[2rem] text-sm p-0 ml-[1rem] cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem] right-0 pl-[0.75rem]" id="slide-arrow-next">
+          &#8250;
+        </button>
+      </div>
+    </section>
   </div>
   <script src="main.js"></script>
 </body>
