--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="public/output.css">
   <link rel="stylesheet" href="src/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.4/dist/flowbite.min.css" />
   <title>Finito Services</title>
 </head>
 <body class="overflow-hidden">
@@ -199,12 +200,85 @@
       <p class="text-gray-500">Him she'd let them sixth saw light</p>
       <button class="border-2 border-blue-700 bg-blue-700 text-white font-bold hover:text-black mt-9 pr-6 pl-6 pt-3 pb-3 rounded-3xl hover:bg-blue-200">Shop Now</button>
     </div>
-    <section id="slider-wrapper" class="m-[1rem] relative top-[205rem] overflow-hidden ">
+
+<div id="slides-container" class="relative top-[205rem] w-[100%] border-solid border-2 border-black" data-carousel="static">
+  <!-- Carousel wrapper -->
+  <div class="relative h-[100%] overflow-hidden border-solid border-2 border-blue-700 rounded-lg">
+       <!-- Item 1 -->
+      <div class="hidden h-[70%] duration-700 ease-in-out border-solid border-2 border-blue-700" data-carousel-item="active">
+        <div class="grid relative w-[100%] place-items-center -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
+          <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+        </div>
+      </div>
+      <!-- Item 2 -->
+      <div class="hidden h-[70%] duration-700 ease-in-out" data-carousel-item>
+          <div class="grid relative w-[100%] place-items-center -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+            <p class="text-sm text-gray-400">Accessories</p>
+              <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+              <p class="text-gray-600">$150.00</p>
+          </div>
+      </div>
+      <!-- Item 3 -->
+      <div class="hidden h-[70%] duration-700 ease-in-out" data-carousel-item>
+        <div class="grid relative w-[100%] place-items-center -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2" alt="...">
+          <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+        </div>
+      </div>
+  </div>
+  <!-- Slider indicators -->
+  <!-- <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
+      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
+  </div> -->
+  <!-- Slider controls -->
+  <button type="button" class="absolute top-0 left-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
+      <span class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+          <span class="sr-only">Previous</span>
+      </span>
+  </button>
+  <button type="button" class="absolute top-0 right-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-next>
+      <span class="inline-flex items-center justify-center w-8 h-8 rounded-full sm:w-10 sm:h-10 bg-white/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
+          <svg aria-hidden="true" class="w-5 h-5 text-white sm:w-6 sm:h-6 dark:text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+          <span class="sr-only">Next</span>
+      </span>
+  </button>
+</div>
+    <!-- <section id="slider-wrapper" class="m-[1rem] relative top-[205rem] overflow-hidden" data-carousel="static">
       <ul class="w-[100%] flex list-none m-0 p-0 overflow-y-scroll overflow-hidden scroll-smooth " id="slides-container">
-        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"></li>
-        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-sky-500 via-green-500 to-indigo-500"></li>
-        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-violet-500 via-red-500 to-fuchsia-500"></li>
-        <li id="slide" class="w-[100%] h-[100%] flex-[1_0_100%] bg-gradient-to-r from-cyan-500 via-yellow-500 to-blue-500"></li>
+        <li id="slide" class="w-[100%] h-[75%] flex-[1_0_100%] bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
+          <div class="h-[20%] top-[30rem] w-[100%] grid place-items-center relative">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
+        </li> 
+        <li id="slide" class="w-[100%] h-[75%] flex-[1_0_100%] bg-gradient-to-r from-sky-500 via-green-500 to-indigo-500">
+          <div class="h-[20%] top-[30rem] w-[100%] grid place-items-center relative">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
+        </li>
+        <li id="slide" class="w-[100%] h-[75%] flex-[1_0_100%] bg-gradient-to-r from-violet-500 via-red-500 to-fuchsia-500">
+          <div class="h-[20%] top-[30rem] w-[100%] grid place-items-center relative">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
+        </li>
+        <li id="slide" class="w-[100%] h-[75%] flex-[1_0_100%] bg-gradient-to-r from-cyan-500 via-yellow-500 to-blue-500">
+          <div class="h-[20%] top-[30rem] w-[100%] grid place-items-center relative">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold hover:text-blue-700">Quartz Belt Watch</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
+        </li>
       </ul>
       <div class="flex w-[100%]">
         <button class="flex m-auto h-[2rem] bg-white hover:bg-black-400 w-[2rem] text-sm p-0 mr-[1rem] cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem] left-0 pl-[0.25rem]" id="slide-arrow-prev">
@@ -214,8 +288,10 @@
           &#8250;
         </button>
       </div>
-    </section>
+    </section> -->
   </div>
+  <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
+  <script src="../path/to/flowbite/dist/flowbite.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
