--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
       </div>
     </div>
     <br>
-    <p id="second-items-header-1" class="text-xs px-2 relative top-[22rem]">Popular Item in the market</p>
-    <p id="second-items-header-2" class="text-3xl px-2 bold underline relative top-[22rem]">Trending Market</p>
+    <div id="second-items-header">
+      <p id="second-items-header-1" class="text-xs px-2 relative top-[22rem]">Popular Item in the market</p>
+      <div class="flex relative top-[22rem]">
+        <p id="second-items-header-2" class="text-3xl p-2 font-extrabold relative">Trending</p>
+        <p id="second-items-header-2" class="text-3xl py-2 font-extrabold border-b-2 border-blue-700 relative">Product</p> 
+      </div>
+    </div>
     <br>
     <div id="second-items">
       <div class="top-[22rem] relative">
@@ -200,7 +205,15 @@
       <p class="text-gray-500">Him she'd let them sixth saw light</p>
       <button class="border-2 border-blue-700 bg-blue-700 text-white font-bold hover:text-black mt-9 pr-6 pl-6 pt-3 pb-3 rounded-3xl hover:bg-blue-200">Shop Now</button>
     </div>
-
+    <br>
+    <div id="slide-items-header">
+      <p id="slide-items-header-1" class="text-xs px-2 relative top-[90rem]">Popular Item in the market</p>
+      <div class="flex relative top-[90rem]">
+        <p id="slide-items-header-2" class="text-3xl p-2 font-extrabold relative">Best</p>
+        <p id="slide-items-header-3" class="text-3xl py-2 font-extrabold border-solid border-b-2 border-blue-700 relative">Sellers</p>
+      </div>
+    </div>
+    <br>
     <div id="slides-container" class="relative h-[50rem] top-[205rem] w-[100%]" data-carousel="static">
       <!-- Carousel wrapper -->
       <div class="relative h-[100%] overflow-hidden m-3">
