Carousel Laptop grid - no slide yet

--- a/index.html
+++ b/index.html
@@ -214,62 +214,79 @@
       </div>
     </div>
     <br>
-    <div id="slides-container" class="relative h-[50rem] top-[110rem] w-[100%]" data-carousel="static">
+    <div id="slides-container" class="relative top-[90rem] w-[97%] h-[35rem]">
       <!-- Carousel wrapper -->
-      <div class="grid grid-cols-2 h-[100%] overflow-hidden relative gap-x-4 m-4">
+      <div class="relative w-[100%] ml-4 p-2 gap-2 h-[100%] grid grid-cols-4 overflow-hidden border-2 border-black ">
         <!-- Item 1 -->
-        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around duration-500 ease-in-out rounded-lg bg-yellow-100" data-carousel-item="active">
+        <div id="carousel-item" class="group relative w-[90%] h-[50%] duration-500 ease-in-out rounded-lg bg-yellow-100" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
             <span class="border-solid border-2 border-black p-2">&#8752;</span>
           </div>
-          <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2">
+          <b>1</b>
+          <div class="grid absolute w-[100%] place-items-center top-[26rem] -translate-x-1/2 -translate-y-1/2 left-1/2">
             <p class="text-sm text-gray-400">Accessories</p>
             <p class="text-xl font-bold group-hover:text-blue-700">Quartz Belt Watch</p>
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
         <!-- Item 2 -->
-        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-green-500 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group relative w-[90%] h-[50%] rounded-lg duration-500 bg-green-500 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
             <span class="border-solid border-2 border-black p-2">&#8752;</span>
           </div>
-          <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
+          <b>2</b>
+          <div class="grid absolute w-[100%] place-items-center top-[26rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
             <p class="text-sm text-gray-400">Accessories</p>
             <p class="text-xl font-bold group-hover:text-blue-700">Qasmlak</p>
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
         <!-- Item 3 -->
-        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-blue-200 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group relative h-[50%] w-[90%] rounded-lg place-content-around duration-500 bg-blue-200 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
             <span class="border-solid border-2 border-black p-2">&#8752;</span>
           </div>
-          <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
+          <b>3</b>
+          <div class="grid absolute w-[100%] place-items-center top-[26rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
             <p class="text-sm text-gray-400">Accessories</p>
             <p class="text-xl font-bold group-hover:text-blue-700">QMlkokajs</p>
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div id="carousel-item" class="group hidden w-[50%] h-[70%] place-content-around rounded-lg duration-500 bg-red-300 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group relative h-[50%] w-[90%] place-content-around rounded-lg duration-500 bg-red-300 ease-in-out" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
             <span class="border-solid border-2 border-black p-2">&#8752;</span>
           </div>
-          <div class="grid relative w-[100%] place-items-center top-[30rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
+          <b>4</b>
+          <div class="grid absolute w-[100%] place-items-center top-[26rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
+            <p class="text-sm text-gray-400">Accessories</p>
+            <p class="text-xl font-bold group-hover:text-blue-700">QMlkokajs</p>
+            <p class="text-gray-600">$150.00</p>
+          </div>
+        </div>
+        <div id="carousel-item" class="group relative place-content-around w-[90%] h-[50%] rounded-lg duration-500 bg-orange-300 ease-in-out" data-carousel-item>
+          <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
+            <span class="border-solid border-2 border-black p-2">&#8750;</span>
+            <span class="border-solid border-2 border-black p-2">&#8751;</span>
+            <span class="border-solid border-2 border-black p-2">&#8752;</span>
+          </div>
+          <b>5  </b>
+          <div class="grid absolute w-[100%] place-items-center top-[26rem] -translate-x-1/2 -translate-y-1/2 left-1/2" alt="...">
             <p class="text-sm text-gray-400">Accessories</p>
             <p class="text-xl font-bold group-hover:text-blue-700">QMlkokajs</p>
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
       </div>
-      <div class="relative flex justify-center w-[100%] h-[3rem] pb-[3rem] place-items-center">
+      <div class="absolute flex justify-center w-[100%] h-[3rem] pb-[3rem] place-items-center">
         <button class="hover:bg-gray-500 rounded-md hover:text-white text-3xl p-0 cursor-pointer opacity-[2rem] transition-opacity hover:opacity-[3rem] focus:opacity-[3rem]" data-carousel-prev>
           &#8678; <!-- html arrow codes-->
         </button>
@@ -277,13 +294,6 @@
           &#8680;
         </button>
       </div>
-  <!-- Slider indicators -->
-  <!-- <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 1" data-carousel-slide-to="0"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2" data-carousel-slide-to="1"></button>
-      <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3" data-carousel-slide-to="2"></button>
-  </div> -->
-  <!-- Slider controls -->
     </div>
 
   </div>
