carousel mobile- html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <br>
     <div id="slides-container" class="h-[50rem] top-[205rem] w-[100%] relative" data-carousel="static">
       <!-- Carousel wrapper -->
-      <div class="h-[100%] m-3 overflow-hidden ">
+      <div class="h-[100%] m-3 overflow-hidden relative">
         <div id="carousel-item" class="group hidden h-[70%] duration-300 ease-in-out rounded-lg bg-yellow-100" data-carousel-item>
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
@@ -229,7 +229,7 @@
             <p class="text-gray-600">$150.00</p>
           </div>
         </div>
-        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-green-500 ease-in-out" data-carousel-item>
+        <div id="carousel-item" class="group hidden h-[70%] duration-300 bg-green-500 ease-in-out" data-carousel-item="active">
           <div class="flex group-hover:visible invisible justify-center space-x-4 absolute bottom-0 h-[6rem] place-items-center w-[100%] border-2 border-black">
             <span class="border-solid border-2 border-black p-2">&#8750;</span>
             <span class="border-solid border-2 border-black p-2">&#8751;</span>
